# analises_ml

./: README.md  pyproject.toml  requirementes.txt  streamlit_app.py
