[project]
name = "analises"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Benvenuti",email = "mateusjbenvenuti@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<4"
dependencies = [
    "streamlit (>=1.48.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "reportlab (>=4.4.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
