[tool.poetry]
name = "analises"
version = "0.1.0"
description = ""
authors = ["Mateus Benvenuti <mateusjbenvenuti@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

  
[tool.poetry.dependencies]
python = ">=3.9,<4"
streamlit = ">=1.48.0,<2.0.0"
requests = ">=2.32.4,<3.0.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
pillow = ">=11.3.0,<12.0.0"
reportlab = ">=4.4.3,<5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
